fix for scrollbar 'hop' on modal open

--- a/less/modals.less
+++ b/less/modals.less
@@ -124,6 +124,17 @@
   }
 }
 
+.modal-measure-scrollbar{
+  position:absolute;
+  height:100px;
+  width:100px;
+  top:-300px;
+  left:-300px;
+  overflow:scroll;
+  overflow-y:scroll;
+  .inner{ height:200px }
+}
+
 // Scale up the modal
 @media screen and (min-width: @screen-sm-min) {
 
